# paws-cli

./: .gitignore  CMakeLists.txt  README.md
3rd/argparse-1.1.0/: CMakeLists.txt
data/deepseek/: paws.pal
data/deepseek-linux/: paws.pal
data/kimi/: paws.pal
script/: paws-deepseek-linux-auto.sh  paws-deepseek-linux.sh  paws-deepseek.sh  paws-kimi.sh  paws.sh
src/linux/: main.cpp
src/mac/: main.mm
